Wed Feb  3 03:31:20 2005  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: follow original v 1.57 

	* ext/nkf/nkf-utf8/utf8tbl.c: follow original v 1.8

	* ext/nkf/nkf-utf8/config.h: follow original v 1.7 

Wed Feb  2 23:52:53 2005  sheepman  <sheepman@tcn.zaq.ne.jp>

	* ext/stringio/stringio.c (strio_truncate): should MEMZERO an extended
	  part.  [ruby-dev:25618]

Wed Feb  2 21:56:01 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::Element#convert): added.

	* lib/rss/rss.rb: convert -> need_convert.

	* lib/rss/1.0.rb: ditto.

	* lib/rss/0.9.rb: ditto.

	* lib/rss/2.0.rb: ditto.

	* lib/rss/trackback.rb: ditto.

Wed Feb  2 03:30:58 2005  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/lib/ripper/tokenizer.rb -> lexer.rb.

	* ext/ripper/lib/ripper/lexer.rb: new method Ripper.slice.
	  [experimental]

	* ext/ripper/lib/ripper/sexp.rb: new file. [experimental]

	* ext/ripper/lib/ripper.rb: require ripper/lexer and ripper/sexp.

Tue Feb  1 21:49:24 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRb::DRbObject#respond_to?): check marshal_dump and
	_dump.

Tue Feb  1 00:20:23 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, configure.in: made EXTOUT configurable.

	* ext/extmk.rb (extmake), lib/mkmf.rb: keep topdir as relative style.

	* lib/mkmf.rb: make extensions in depth order.  [ruby-dev:25522]

	* configure.in (aix): fix linker flags on AIX.  [ruby-talk:125460]

Mon Jan 31 13:16:39 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: add tkutil configuration step (remove old schema)

	* ext/tk/depend: remove the information of tkutil

	* ext/tk/make-tkutil: sub-part of Makefile to compile tkutil

	* ext/tk/tkutil/tkutil.c: move tkutil.c to subdirectory

	* ext/tk/tkutil/subconf.rb: configuration file for tkutil.c

	* ext/tk/tkutil/depend: ditto

Mon Jan 31 13:13:35 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c: add invalid namespace check
